22 July 2011: Wouter
	- added contrib/nsd.init (nsdc.sh that only does start,stop).
	- removed nsdc.sh, nsd-xfer, nsd-notify, nsd-patch.
	  for rc.d: contrib/nsd.init, or platform specific init script.
	  nsd-xfer: see nsd-control transfer, or force_transfer.
	  nsd-notify: see nsd-control notify.
	  nsd-patch: see (cron job to) nsd-control write.

21 July 2011: Wouter
	- nsd-control notify, transfer and force_transfer.
	- fix for bug in write and reload zone option.
	- nsd-control zonestatus command.

20 July 2011: Wouter
	- reload can be given optional zone argument.
	- nsd-control reopen_logfile.
	- nsd-control write changed zonefiles.

18 July 2011: Wouter
	- Fix xfrd activation of zones to not break running zone transfers.

13 July 2011: Wouter
	- fix that signal causes stats to be printed to log.
	- fix stats without remotecontrol.
	- ignore notify and soainfo for deleted zone, if due to race they
	  arrive after the deletion.
	- tpkg test for nsd-control, addzone and delzone

5 July 2011: Wouter
	- fix link to ssl with FreeBSD make.

1 July 2011: Wouter
	- fix optimize compile to link with ssl.

29 June 2011: Wouter
	- nsd-control delzone zone.  Removes zone from zonelist.
	- stats includes number of zones.
	- RAXFR stat, which has not worked since NSD 1.2.4, reinstated.
	- print more memory statistics, for xfrd and config.

28 June 2011: Wouter
	- nsd-control addzone zone pattern.  Adds new zone, slave or master.

27 June 2011: Wouter
	- nsd-control stats and stats_noreset (if enabled at compile time).
	  nsd does not print statistics to logfile if period is 0.

23 June 2011: Wouter
	- -flto check supports clang compiler.

22 June 2011: Wouter
	- remote control, config, client, setup and status command.
	- reload nsd-control command.
	- stop nsd-control command.
	- verbosity nsd-control command.

14 June 2011: Wouter
	- Fix to have no authority NS set processing for CNAMEs.

9 June 2011: Wouter